--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="row">
 
                 <div class="col-sm-3">
-                    <div class="card">
+                    <div class="card-columns">
                         <div class="card-header text-center">
                             Add A Train
 
@@ -72,7 +72,7 @@
 
 
                 <div class="col-sm-9">
-                    <div class="card">
+                    <div class="card-columns">
                         <div class="card-header text-center">
                             Current Train Schedule
                         </div>
