--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 </head>
 
-<body background="assets/img/brickwall.png">
+<!--<body background="assets/img/brickwall.png">-->
+    <body background="assets/img/bw.jpg">
 
     <div class="container">
         <div class="jumbotron text-center">
@@ -30,7 +31,7 @@
             <div class="row">
 
                 <div class="col-sm-3">
-                    <div class="card-columns">
+                    <div class="card">
                         <div class="card-header text-center">
                             Add A Train
 
@@ -72,7 +73,7 @@
 
 
                 <div class="col-sm-9">
-                    <div class="card-columns">
+                    <div class="card">
                         <div class="card-header text-center">
                             Current Train Schedule
                         </div>
