--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <div class="container">
         <div class="jumbotron text-center">
 
-            <h1 class="display-3">Train Scheduler</h1>
+            <h1 class="display-3">NYC Subway Schedule</h1>
             <p class="lead">Add your train to the scheduler</p>
-
 
 
         </div>
@@ -33,7 +32,7 @@
                 <div class="col-sm-3">
                     <div class="card">
                         <div class="card-header text-center">
-                            Add A Train
+                            Add Your Stop
 
                         </div>
 
