updating the js file
have some more features working now.  have issue where loop keeps updating and adding info.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                         <td>Train Name</td>
                                         <td>Destination</td>
                                         <td>Frequency (min)</td>
-                                        <td>Next Arrival</td>
+                                        <td>Next Train</td>
                                         <td>Minutes Away</td>
                                     </tr>
 
